--- a/demographics/Demographics.html
+++ b/demographics/Demographics.html
@@ -82,6 +82,7 @@
                     {% for country in countries %}
                     <option value="{{ country }}">{{country}}</option>
                     {% endfor %}
+                    <option value="Prefer not to say">{{pnts}}</option>
                 </select>
             </div>
 
@@ -94,6 +95,7 @@
                     {% for country in countries %}
                     <option value="{{ country }}">{{country}}</option>
                     {% endfor %}
+                    <option value="Prefer not to say">{{pnts}}</option>
                 </select>
             </div>
 
@@ -106,6 +108,7 @@
                     {% for country in countries %}
                     <option value="{{ country }}">{{country}}</option>
                     {% endfor %}
+                    <option value="Prefer not to say">{{pnts}}</option>
                 </select>
             </div>
 
