separated prolific and toluna tags for introduction and changed dice scales

--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -25,7 +25,7 @@
     {{ if C.prolific == True }}
 
     <p>
-        {{ intro_pairing }}
+        {{ intro_pairing_prolific }}
     </p>
 
     <p>
@@ -63,51 +63,37 @@
     {{ if C.prolific == False }}
 
     <p>
-        Throughout the study, you will be paired with other participants who are also taking part in the study.
+        {{ intro_pairing }}
     </p>
 
     <p>
-        In addition to the compensation you receive for participating,
-        you can receive <b> bonus points</b> based on <b>your own</b> <u>and</u> <b>other participants'</b> decisions.
+        {{ intro_toluna }}
     </p>
 
     <p>
-        <b> 1 point = {{ session.real_world_currency_per_point }} GBP </b>
+        {{ intro_conversion }}
     </p>
 
-    <p>
-        You will make decisions in different <b>situations</b> and in different <b>roles</b>. At the end of the study,
-        <b> <u>one</u> situation</b> and <b> <u>one</u> role</b> will be randomly selected to <b>determine your bonus points</b>. Since you will not know
-        in advance which decision will count, you should <b>treat each decision as if it is selected</b>.
-    </p>
-
-    <h6><u>Block 1</u></h6>
+    <h6><u>{{ intro_block1_title }}</u></h6>
 
      <p>
-        There are two blocks in this study: a longer first block and a shorter second block.
-         In the first block, you will make decisions in different <b>situations</b> and in different <b>roles</b>.
-         After the first block of decisions,
-        <b> <u>one</u> situation</b> and <b> <u>one</u> role</b> from the first block will be randomly selected to <b>determine your bonus points</b> in the first block.
-    </p>
+         {{ intro_block1 }}
+     </p>
 
-      <h6><u>Block 2</u></h6>
+      <h6><u>{{ intro_block2_title }}</u></h6>
 
-    <p>
-        In the second block, you will make additional decisions in different <b>situations</b>,
-        using your bonus points from the first block. After the second block, again
-        <b> <u>one</u> situation</b> will be randomly selected to <b>determine your final bonus points</b>.
-    </p>
+     <p>
+         {{ intro_block2 }}
+     </p>
 
-     <h6><u>After the study</u></h6>
+     <h6><u>{{ intro_points_title }}</u></h6>
 
-    <p>
-        Bonus points are calculated after all participants have completed the study.
-        They cannot be negative. Since you will not know in advance which decisions will count,
-        you should <b>treat each decision as if it is selected</b>.
-    </p>
+     <p>
+         {{ intro_points }}
+     </p>
 
     <b>
-        Please read the instructions carefully, as your decisions affect not only your payoff but also those of other participants.
+        {{ intro_carefully }}
     </b>
 
     {{ endif }}
