adjust crowding norm scales

--- a/baseline_trials/Instructions.html
+++ b/baseline_trials/Instructions.html
@@ -692,6 +692,12 @@
             {{ instru_countries_list }}
         </p>
 
+        <div class="figure-container short-figure-container">
+
+            <img class="scenario_image" alt="all_participating_countries_map" src="/static/global/all_participating_countries_map.png">
+
+        </div>
+
         <p>
             {{ instru_countries }}
         </p>
