--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -933,10 +933,14 @@
 
             <div class="slider-labels">
                 <span>{{ very_selfish|safe }}</span>
-                <span>{{ selfish|safe }}</span>
-                <span>{{ slightly_selfish|safe }}</span>
-                <span>{{ slightly_altruistic|safe }}</span>
-                <span>{{ altruistic|safe }}</span>
+<!--                <span>{{ selfish|safe }}</span>-->
+<!--                <span>{{ slightly_selfish|safe }}</span>-->
+<!--                <span>{{ slightly_altruistic|safe }}</span>-->
+<!--                <span>{{ altruistic|safe }}</span>-->
+                <span>   </span>
+                <span>   </span>
+                <span>   </span>
+                <span>   </span>
                 <span>{{ very_altruistic|safe }}</span>
             </div>
 
@@ -960,10 +964,14 @@
 
             <div class="slider-labels">
                 <span>{{ very_unlikable|safe }}</span>
-                <span>{{ unlikable|safe }}</span>
-                <span>{{ slightly_unlikable|safe }}</span>
-                <span>{{ slightly_likable|safe }}</span>
-                <span>{{ likable|safe }}</span>
+<!--                <span>{{ unlikable|safe }}</span>-->
+<!--                <span>{{ slightly_unlikable|safe }}</span>-->
+<!--                <span>{{ slightly_likable|safe }}</span>-->
+<!--                <span>{{ likable|safe }}</span>-->
+                <span>   </span>
+                <span>   </span>
+                <span>   </span>
+                <span>   </span>
                 <span>{{ very_likable|safe }}</span>
             </div>
 
