add map of countries

--- a/baseline_trials/Instructions.html
+++ b/baseline_trials/Instructions.html
@@ -692,11 +692,8 @@
             {{ instru_countries_list }}
         </p>
 
-        <div class="figure-container short-figure-container">
+        <img style="width:75%; display: block; margin: 0 auto;" src="/static/global/all_participating_countries_map.png">
 
-            <img class="scenario_image" alt="all_participating_countries_map" src="/static/global/all_participating_countries_map.png">
-
-        </div>
 
         <p>
             {{ instru_countries }}
