changed consent show up fee to be prolific or toluna and change scales of dice task

--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -41,7 +41,11 @@
 
       <h6><u>{{ consent_payment_title }}</u></h6>
 
-      {{ consent_payment|safe }}
+      {{ if C.prolific == True }}
+      {{ consent_payment_prolific|safe }}
+      {{ else }}
+      {{ consent_payment_toluna|safe }}
+      {{ endif }}
 
       <h6><u>{{ consent_rights_title }}</u></h6>
 
