--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -4,14 +4,6 @@
     {{ button_block|safe }} 2
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> {{ button_decision|safe }} {{ participant.decision_page_number }} </p>
-
-<div style="display: flex; justify-content: center; margin-bottom: 4px;">
-    <label>
-        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
-        </progress>
-    </label>
-</div>
 
 
 {{ endblock }}
@@ -145,12 +137,12 @@
         .slider-labels {
             display: flex;
             justify-content: space-between;
-            margin-top: -5px; /* optional: pulls labels closer to slider */
+            margin-top: 0px; /* optional: pulls labels closer to slider */
             padding: 0;
         }
 
         .slider-labels span {
-            font-size: 16px;
+            font-size: 14px;
             white-space: nowrap;
         }
 
@@ -449,8 +441,12 @@
             </span>
 
             <div class="slider-labels">
-                <span>{{ dice_not_trust }}</span>
-                <span>{{ dice_very_trust }}</span>
+                <span>{{ very_untrustworthy }}</span>
+                <span>{{ untrustworthy }}</span>
+                <span>{{ slightly_untrustworthy }}</span>
+                <span>{{ slightly_trustworthy }}</span>
+                <span>{{ trustworthy }}</span>
+                <span>{{ very_trustworthy }}</span>
             </div>
         </div>
 
