Change country names to chosen language and add create session in language selection app to set country only once

--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -932,7 +932,7 @@
             <input type="range" name="crowding_norm_decision1" id="slider1" min="0" max="100" value="" class="slider hidden-thumb">
 
             <div class="slider-labels">
-                <span>{{ very_selfish|safe }}</span>
+                <span>{{ not_at_all_altruistic|safe }}</span>
 <!--                <span>{{ selfish|safe }}</span>-->
 <!--                <span>{{ slightly_selfish|safe }}</span>-->
 <!--                <span>{{ slightly_altruistic|safe }}</span>-->
@@ -963,7 +963,7 @@
             <input type="range" name="crowding_norm_decision2" id="slider2" min="0" max="100" value="" class="slider hidden-thumb">
 
             <div class="slider-labels">
-                <span>{{ very_unlikable|safe }}</span>
+                <span>{{ not_at_all_likable|safe }}</span>
 <!--                <span>{{ unlikable|safe }}</span>-->
 <!--                <span>{{ slightly_unlikable|safe }}</span>-->
 <!--                <span>{{ slightly_likable|safe }}</span>-->
