change funciton selecting dice so that disntaces are equally drawn

--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -147,6 +147,7 @@
             justify-content: space-between;
             margin-top: 0px; /* optional: pulls labels closer to slider */
             padding: 0;
+            text-align: center;
         }
 
         .slider-labels span {
